fix filter method

--- a/assets/localization/ar.json
+++ b/assets/localization/ar.json
@@ -379,6 +379,7 @@
   "Popular on Evanto": "الشهير على Evento",
   "Search": "بحث",
   "VIEW MAP": "عرض الخريطة",
+  "Map": "الخريطة",
   "Get Direction": "احصل على الاتجاهات",
   "Select Video": "اختر فيديو",
   "Please select a video that is no longer than 2 minutes.": "يرجى اختيار فيديو لا يزيد طوله عن دقيقتين.",
