fix ticketing for organizer

--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -585,7 +585,7 @@
       "Ḥamah": "Ḥamah",
       "Homs": "Homs",
       "Idlib": "Idlib",
-      "Latakia": "Lattakia",
+      "Latakia": "Latakia",
       "Rif Dimashq": "Rif Dimashq"
     
 ,      "MTN Payment Number":"MTN Payment Number"
